# qa_guru_advanced_intro

./: README.md  main.py  pyproject.toml
fastapi_server/: server.py
fastapi_server/data/: users.json
fastapi_server/data/schemas/: new_user.py  user.py
test_server/: test_reqes.py
